Incorrect header name used in __has_include https://bugs.webkit.org/show_bug.cgi?id=237914 <rdar://90271228>

Reviewed by Geoffrey Garen.

* Configurations/WebKit.xcconfig:
* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):



Canonical link: https://commits.webkit.org/248487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291352 268f45cc-cd09-0410-ab3c-d52691b4dbfc